istio-configs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: udp-echo-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 5000
      name: udp-echo
      protocol: UDP
    hosts:
    - echo.com
  - port:
      number: 5000
      name: tcp-echo
      protocol: TCP
    hosts:
    - echo.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: udp-routes
  namespace: istio-system
spec:
  hosts:
  - echo.com
  gateways:
  - udp-echo-gateway
  exportTo:
  - "*"
  tcp:
  - route:
    - destination:
        host: echo.udp-echo.svc.cluster.local
        subset: v1
        port:
          number: 2020
      weight: 80
    - destination:
        host: echo.udp-echo.svc.cluster.local
        subset: v2
        port:
          number: 2020
      weight: 20
  udp:
  - match:
    - port: 5000
    route:
    - destination:
        host: echo.udp-echo.svc.cluster.local
        port:
          number: 2020
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: udp-echo-dr
  namespace: istio-system
spec:
  host: "echo.udp-echo.svc.cluster.local"
  exportTo:
  - "*"
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
